// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard and Grading NavLinks render for Role.Staff 1`] = `
<Blueprint4.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint4.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint4.Icon
        icon="flame"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint4.Icon
        icon="lightbulb"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint4.Icon
        icon="predictive-analysis"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint4.Icon
        icon="comparison"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint4.Icon
        icon="manual"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Ground Control"
      to="/courses/0/groundcontrol"
    >
      <Blueprint4.Icon
        icon="satellite"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Ground Control
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Dashboard"
      to="/courses/0/dashboard"
    >
      <Blueprint4.Icon
        icon="globe"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Dashboard
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Sourcereel"
      to="/courses/0/sourcereel"
    >
      <Blueprint4.Icon
        icon="mobile-video"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Sourcereel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Grading"
      to="/courses/0/grading"
    >
      <Blueprint4.Icon
        icon="endorsed"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Grading
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Game Simulator"
      to="/courses/0/storysimulator"
    >
      <Blueprint4.Icon
        icon="crown"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Game Simulator
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint4.Icon
        icon="notifications"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading and AdminPanel NavLinks do NOT render for Role.Student 1`] = `
<Blueprint4.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint4.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint4.Icon
        icon="flame"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint4.Icon
        icon="lightbulb"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint4.Icon
        icon="predictive-analysis"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint4.Icon
        icon="comparison"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint4.Icon
        icon="manual"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint4.Icon
        icon="notifications"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>
`;

exports[`MissionControl, GroundControl, Sourcereel, StorySimulator, Dashboard, Grading, XP Calculation and AdminPanel NavLinks render for Role.Admin 1`] = `
<Blueprint4.Navbar
  className="NavigationBar secondary-navbar"
>
  <Blueprint4.NavbarGroup
    align="left"
  >
    <NavLink
      className={[Function]}
      title="Missions"
      to="/courses/0/missions"
    >
      <Blueprint4.Icon
        icon="flame"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Missions
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Quests"
      to="/courses/0/quests"
    >
      <Blueprint4.Icon
        icon="lightbulb"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Quests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Paths"
      to="/courses/0/paths"
    >
      <Blueprint4.Icon
        icon="predictive-analysis"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Paths
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Contests"
      to="/courses/0/contests"
    >
      <Blueprint4.Icon
        icon="comparison"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Contests
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Others"
      to="/courses/0/others"
    >
      <Blueprint4.Icon
        icon="manual"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Others
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
  </Blueprint4.NavbarGroup>
  <Blueprint4.NavbarGroup
    align="right"
  >
    <NavLink
      className={[Function]}
      title="Ground Control"
      to="/courses/0/groundcontrol"
    >
      <Blueprint4.Icon
        icon="satellite"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Ground Control
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Dashboard"
      to="/courses/0/dashboard"
    >
      <Blueprint4.Icon
        icon="globe"
      />
      <div
        className="hidden-xs hidden-sm"
      >
        Dashboard
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Sourcereel"
      to="/courses/0/sourcereel"
    >
      <Blueprint4.Icon
        icon="mobile-video"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Sourcereel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Grading"
      to="/courses/0/grading"
    >
      <Blueprint4.Icon
        icon="endorsed"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Grading
      </div>
      <NotificationBadge
        disableHover={true}
        notificationFilter={[Function]}
      />
    </NavLink>
    <NavLink
      className={[Function]}
      title="Game Simulator"
      to="/courses/0/storysimulator"
    >
      <Blueprint4.Icon
        icon="crown"
      />
      <div
        className="hidden-xs hidden-sm hidden-md"
      >
        Game Simulator
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="XP Calculation"
      to="/courses/0/xpcalculation"
    >
      <Blueprint4.Icon
        icon="calculator"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        XP Calculation
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Admin Panel"
      to="/courses/0/adminpanel"
    >
      <Blueprint4.Icon
        icon="settings"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Admin Panel
      </div>
    </NavLink>
    <NavLink
      className={[Function]}
      title="Notifications"
      to="/courses/0/notipreference"
    >
      <Blueprint4.Icon
        icon="notifications"
      />
      <div
        className="hidden-xs hidden-sm hidden-md hidden-lg"
      >
        Notifications
      </div>
    </NavLink>
  </Blueprint4.NavbarGroup>
</Blueprint4.Navbar>
`;
